[package]
name = "virtio-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.6"
spin = "0.7"
r0 = "1"
lazy_static = { version = "1", features = ["spin_no_std"] }
device_tree = { git = "https://github.com/rcore-os/device_tree-rs/" }
linked_list_allocator = "0.9"
